<resources>
    <string name="app_name">CryptoCoin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rank_coins">%s</string>
    <string name="name">Name</string>
    <string name="symbol">Symbol</string>
    <string name="market_cap">Market Cap</string>
    <string name="available_supply">Available Supply</string>
    <string name="volume_24h">Volume (24H)</string>
    <string name="max_supply">Max Supply</string>
    <string name="percent_change_1h">Percent Change (1H)</string>
    <string name="percent_change_24h">Percent Change (24H)</string>
    <string name="percent_change_7d">Percent Change (7D)</string>
    <string name="total_supply">Total Supply</string>
    <string name="price_btc_title">Price BTC</string>
    <string name="average_price_24h">Average price (24H)</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_night_mode_title">Night mode</string>
    <string name="pref_night_mode_dialog_title">Night mode</string>
    <string name="pref_general">General</string>
    <string name="pref_currency">Currency</string>
    <string name="price_usd">00.00</string>
    <string name="price">%s %s</string>
    <string name="currency_usd">$</string>
    <string name="oneHour">1H</string>
    <string name="twentyFourHour">1D</string>
    <string name="sevenDays">7D</string>
    <string name="percent_change">%s%%</string>
    <string name="title_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_about">About</string>
    <string name="rank">Rank</string>
    <string name="price_title">Price</string>
    <string name="last_updated">Last updated</string>
    <string name="rank_value">%s</string>
    <string name="coin_icon_description">Coin icon</string>
    <string name="action_currency">Currency</string>
    <string name="action_refresh">Refresh</string>
</resources>