<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@color/black"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="exitUntilCollapsed">

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_arrow_back_ios_24" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/price_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    app:layout_scrollFlags="scroll|enterAlways"
                    tools:text="$1000" />
                <TextView
                    android:id="@+id/change_toolbar"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_scrollFlags="scroll|enterAlways"
                    tools:text="$1000" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tabMode="scrollable">

                    </com.google.android.material.tabs.TabLayout>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/historyChart"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintDimensionRatio="21:9"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:columnCount="2"
                    android:useDefaultMargins="true">

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/rank"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/rank"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/name"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/symbol"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/symbol"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        tools:text="#1" />

                    <TextView
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/price_title"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        tools:text="$1000" />

                    <TextView
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/average_price_24h"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/average_price_24h"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        tools:text="$1000" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/percent_change_1h"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/white"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/percent_change_1h"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        android:visibility="gone"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/percent_change_24h"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/percent_change_24h"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/percent_change_7d"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/white"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/percent_change_7d"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        android:visibility="gone"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/available_supply"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/available_supply"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/max_supply"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/max_supply"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/market_cap"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/marketCap"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/volume_24h"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/volume_24h"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="@color/white"
                        tools:text="#1" />

                </GridLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
